--- a/.github/workflow/wf.yml
+++ b/.github/workflow/wf.yml
@@ -6,8 +6,8 @@ on:
  jobs:
   job1:
   runs-on: ubuntu-latest
-  steps:
-  - name: checks-out your repository under $GITHUB_WORKSPACE
-    users: actions/checkout@v2
-  - name: use echo command
-    run: echo "sample-wf"
+    steps:
+    - name: checks-out your repository under $GITHUB_WORKSPACE
+      uses: actions/checkout@v2
+    - name: use echo command
+      run: echo "sample-wf"
